--- a/main_page/templates/main_page/resources.html
+++ b/main_page/templates/main_page/resources.html
@@ -8,6 +8,7 @@
     <title>Resources - Civic Connect</title>
     <link rel="icon" type="image/x-icon" src="{% static 'main_page/favicon.ico' %}" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="{% static 'main_page/resources.css' %}" />
 </head>
 <body>
@@ -18,7 +19,7 @@
             <div id="SearchBar" class="input-group">
                 <input type="text" class="form-control" name="filter" {% if keyword %}value="{{ keyword }}"{% endif %} placeholder="Search Resources">
                 <div class="input-group-append">
-                    <button class="btn btn-secondary" type="button">
+                    <button class="btn btn-secondary" type="submit">
                         <i class="fa fa-search"></i>
                     </button>
                 </div>
