--- a/main_page/templates/main_page/home_view.html
+++ b/main_page/templates/main_page/home_view.html
@@ -25,7 +25,7 @@
                 </h3>
             {% else %}
                 <h1>
-                    Welcome User! Check out our Resources Page{% endif %}!
+                    Welcome User! Check out our Resources Page!
                 </h1>
             {% endif %}
         </div>
