--- a/main_page/templates/main_page/home_view.html
+++ b/main_page/templates/main_page/home_view.html
@@ -30,18 +30,21 @@
             {% endif %}
         </div>
     </div>
-    <div class="container text-center d-flex align-items-left justify-content-left h-100">
-        <div class="jumbotron style = border-radius:20px">
-            <h5>My Issues</h5>
-            <ul>
-                <li>Black Lives Matter</li>
-                <li>Supreme Court</li>
-            </ul>
+    <div class="row">
+        {% if user.is_authenticated %}
+        <div class="container text-center d-flex align-items-left justify-content-left h-100 col-xs-2">
+            <div class="jumbotron style = border-radius:20px">
+                <h5>My Issues</h5>
+                <ul>
+                    <li>Black Lives Matter</li>
+                    <li>Supreme Court</li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <div class="container text-center d-flex align-items-center justify-content-center h-100">
-        <div class="jumbotron style = border-radius:20px">
-            {% if needs_address %}
+        {% endif %}
+        <div id="ContactInfo" class="container text-center d-flex align-items-center justify-content-center h-100 col-xs-10">
+            <div class="jumbotron style = border-radius:20px">
+                {% if needs_address %}
                 <h3>Find my Government Officials</h3>
                 <!-- Resource for form https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=vertical-form-layout -->
                 <form action="{% url 'main_page:home_page' %}" method="post">
@@ -58,38 +61,39 @@
                     {% endif %}
                     <button type="submit" value="Submit" class="btn btn-primary">Search</button>
                 </form>
-            {% else %}
-                {% if address %}
-                    <h4><em>Address: </em>{{ address }}</h4>
-                    <a>Change Address</a>
-                {% endif %}
+                {% else %}
                 <h3>My Government Officials</h3>
+                {% if address %}
+                <h4><em>Address: </em>{{ address }}</h4>
+                <a>Change Address</a>
+                {% endif %}
                 <div id="contactGrid">
                     {% for level in contacts %}
-                        <ul>
-                            {% for contact in level %}
-                                <li class="list-group-item">
-                                    <div class="official-contact-info" style="display: grid; text-align: left">
-                                        {% if contact.photo %}
-                                            <img src="{{ contact.photo }}" height="100" alt="{{ contact.name }}" />
-                                        {% endif %}
-                                        <p style="grid-column: 2">
-                                            <strong>{{ contact.name }}</strong><br />
-                                            <strong>{{ contact.office }}</strong><br />
-                                            {% if contact.email %}
-                                                <font class="email">{{ contact.email }}<br /></font>
-                                            {% endif %}
-                                            {% for line in contact.get_address_lines %}
-                                                {{ line }}<br />
-                                            {% endfor %}
-                                        </p>
-                                    </div>
-                                </li>
-                            {% endfor %}
-                        </ul>
+                    <ul>
+                        {% for contact in level %}
+                        <li class="list-group-item">
+                            <div class="official-contact-info" style="display: grid; text-align: left">
+                                {% if contact.photo %}
+                                <img src="{{ contact.photo }}" height="100" alt="{{ contact.name }}" />
+                                {% endif %}
+                                <p style="grid-column: 2">
+                                    <strong>{{ contact.name }}</strong><br />
+                                    <strong>{{ contact.office }}</strong><br />
+                                    {% if contact.email %}
+                                    <font class="email">{{ contact.email }}<br /></font>
+                                    {% endif %}
+                                    {% for line in contact.get_address_lines %}
+                                    {{ line }}<br />
+                                    {% endfor %}
+                                </p>
+                            </div>
+                        </li>
+                        {% endfor %}
+                    </ul>
                     {% endfor %}
                 </div>
-            {% endif %}
+                {% endif %}
+            </div>
         </div>
     </div>
 
