--- a/main_page/templates/main_page/home_view.html
+++ b/main_page/templates/main_page/home_view.html
@@ -126,6 +126,8 @@
     }
 
     var ShowIssueList = function () {
-
+        var block = document.getElementById("PersonalIssues");
+        block.style.display = "none";
+        var form = document.getElementById("AllIssueForm");
     }
 </script>
