template preview formatting

--- a/email_sys/templates/email_sys/template_email.html
+++ b/email_sys/templates/email_sys/template_email.html
@@ -33,7 +33,7 @@
         <div class="card" style="width: 50rem;">
             <div class="card-body">
             <h6 class="card-subtitle mb-2 text-muted">Subject: {{template.title}}</h6>
-            <pre class="card-text">{{template.body}}</pre>
+            <pre style="overflow: auto; white-space: pre-wrap; white-space: -moz-pre-wrap; white-space: -pre-wrap; white-space: -o-pre-wrap; word-wrap: break-word; word-wrap: break-word;" class="card-text">{{template.body}}</pre>
             <a href="mailto:someone@example.com?subject={{urltitle}}&body={{urlbody}}"><b>Send Email</b></a>
             
             </div>
