--- a/email_sys/templates/email_sys/email_view.html
+++ b/email_sys/templates/email_sys/email_view.html
@@ -19,9 +19,9 @@
 
         <div class = "col-xs-1" align = "center">
             <div class="form-group" style ="width: 300px;">
-                <!--<label for="exampleInputEmail1">Email address</label>
+                <label for="exampleInputEmail1">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">Enter your representatives email.</small>-->
+                <small id="emailHelp" class="form-text text-muted">Enter your representatives email.</small>
                  <!--Also add a dropdown-->
             </div>
             
