--- a/main_page/templates/main_page/home_view.html
+++ b/main_page/templates/main_page/home_view.html
@@ -58,7 +58,7 @@
                                             <strong>{{ contact.name }}</strong><br />
                                             <strong>{{ contact.office }}</strong><br />
                                             {% if contact.email %}
-                                                <font class="email">{{ contact.email }}<br /></font>
+                                                <font class="email"><a href="{% url 'email_sys:prompt_page' %}" class="text-decoration-none">{{ contact.email }}</a><br /></font>
                                             {% endif %}
                                             {% for line in contact.get_address_lines %}
                                                 {{ line }}<br />
