--- a/main_page/templates/main_page/home_view.html
+++ b/main_page/templates/main_page/home_view.html
@@ -53,7 +53,9 @@
                 {% if address %}
                     <div id="CurrentAddressBlock">
                         <h5><em>Address: </em>{{ address }}</h5>
-                        <p class="update-link" onclick="ChangeAddress()">Change Address</p>
+                        {% if user.is_authenticated %}
+                            <p class="update-link" onclick="ChangeAddress()">Change Address</p>
+                        {% else %}
                     </div>
                     <form id="ChangeAddressForm" action="{% url 'main_page:home_page' %}" method="post" style="display: none">
                         {% csrf_token %}
