--- a/main_page/templates/main_page/home_view.html
+++ b/main_page/templates/main_page/home_view.html
@@ -69,27 +69,34 @@
                 {% endif %}
                 <div id="contactGrid">
                     {% for level in contacts %}
-                    <ul>
-                        {% for contact in level %}
-                        <li class="list-group-item">
-                            <div class="official-contact-info" style="display: grid; text-align: left">
-                                {% if contact.photo %}
-                                <img src="{{ contact.photo }}" height="100" alt="{{ contact.name }}" />
-                                {% endif %}
-                                <p style="grid-column: 2">
-                                    <strong>{{ contact.name }}</strong><br />
-                                    <strong>{{ contact.office }}</strong><br />
-                                    {% if contact.email %}
-                                    <font class="email">{{ contact.email }}<br /></font>
-                                    {% endif %}
-                                    {% for line in contact.get_address_lines %}
-                                    {{ line }}<br />
-                                    {% endfor %}
-                                </p>
-                            </div>
-                        </li>
-                        {% endfor %}
-                    </ul>
+                        <ul>
+                            {% for contact in level %}
+                                <li class="list-group-item">
+                                    <div class="official-contact-info" style="display: grid; text-align: left">
+                                        {% if contact.photo %}
+                                            <img src="{{ contact.photo }}" height="100" alt="{{ contact.name }}" />
+                                        {% endif %}
+                                        <p style="grid-column: 2">
+                                            <strong>{{ contact.name }}</strong><br />
+                                            <strong>{{ contact.office }}</strong><br />
+                                     
+                                            {% for line in contact.get_address_lines %}
+                                                {{ line }}<br />
+                                            {% endfor %}
+                                            {% if contact.email %}
+                                            <form action="{% url 'email_sys:prompt_page' %}" method="post">
+                                                <!--hidden input, -->
+                                                {% csrf_token %}
+                                                <button class="btn btn-info">{{ contact.email }}</button>
+                                                <input name="email" value="{{ contact.email }}" type="hidden" />
+                                                <!--<font class="email"><a href="{% url 'email_sys:prompt_page' %}" class="text-decoration-none">{{ contact.email }}</a><br /></font>-->
+                                            </form>
+                                        {% endif %}
+                                        </p>
+                                    </div>
+                                </li>
+                            {% endfor %}
+                        </ul>
                     {% endfor %}
                 </div>
             {% endif %}
